--- a/chat_app/requirements.txt
+++ b/chat_app/requirements.txt
@@ -29,6 +29,8 @@ attrs==24.2.0
     #   aiohttp
     #   jsonschema
     #   referencing
+beautifulsoup4==4.12.3
+    # via -r requirements.in
 blinker==1.9.0
     # via streamlit
 cachetools==5.5.0
@@ -81,6 +83,8 @@ jinja2==3.1.5
     #   pydeck
 jiter==0.8.2
     # via openai
+joblib==1.4.2
+    # via scikit-learn
 jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
@@ -136,6 +140,8 @@ numpy==1.26.4
     #   langchain-community
     #   pandas
     #   pydeck
+    #   scikit-learn
+    #   scipy
     #   streamlit
 ollama==0.4.4
     # via langchain-ollama
@@ -210,6 +216,10 @@ rpds-py==0.22.3
     # via
     #   jsonschema
     #   referencing
+scikit-learn==1.6.0
+    # via -r requirements.in
+scipy==1.14.1
+    # via scikit-learn
 six==1.17.0
     # via python-dateutil
 smmap==5.0.1
@@ -219,6 +229,8 @@ sniffio==1.3.1
     #   anyio
     #   httpx
     #   openai
+soupsieve==2.6
+    # via beautifulsoup4
 sqlalchemy==2.0.36
     # via
     #   langchain
@@ -231,6 +243,8 @@ tenacity==9.0.0
     #   langchain-community
     #   langchain-core
     #   streamlit
+threadpoolctl==3.5.0
+    # via scikit-learn
 tiktoken==0.8.0
     # via langchain-openai
 toml==0.10.2
