--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu:latest
-LABEL authors="dushan"
-
-ENTRYPOINT ["top", "-b"]
+FROM ollama/ollama
+WORKDIR /app
+COPY ollama.sh .
+RUN chmod +x ollama.sh && ./ollama.sh
+EXPOSE 11434
